# vishnu

./: Setup.hs  vishnu.cabal
Vishnu/: Vis.hs
Vishnu/Cmds/: Pull.hs  Update.hs
Vishnu/Lib/: Common.hs  Repo.hs  RunVis.hs  Testing.hs
