Name:                vishnu
Version:             0.1
Description:         Build, test and deploy 
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.2

Executable vis
--   Hs-source-dirs:   prog
   Main-Is:             Vishnu/Vis.hs
   other-modules:       
   ghc-options:         -O2 -threaded -with-rtsopts=-N
   Build-depends:       base>=4, syb, mtl>2, parsec>=3, 
                        random, unix, directory, process,containers,
                        bytestring,binary,aeson>=0.5, text, 
                        unordered-containers, vector
